# medsynth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
medsynth/: __init__.py  config.py  distortions.py  freetext.py  generate.py  patients.py  schemas.py
medsynth/locales/: __init__.py  base.py
medsynth/locales/ar_EG/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/ar_SA/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/es_AR/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/es_ES/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/es_MX/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/he_IL/: __init__.py  demographics.py  facilities.py  freetext.py  medical.py  national_id.py
medsynth/locales/scripts/: arabic.py  hebrew.py  latin.py
medsynth/sample_data/ar_EG/: medical_almokhtabar_lab.ndjson  medical_delta_discharge.ndjson  medical_delta_referral.ndjson  medical_delta_visit.ndjson  medical_nile_discharge.ndjson  medical_nile_lab.ndjson  medical_nile_referral.ndjson  medical_tahrir_discharge.ndjson  medical_tahrir_referral.ndjson  medical_tahrir_visit.ndjson
medsynth/sample_data/ar_SA/: medical_hayat_lab.ndjson  (+9 more)
tests/: test_locale_loading.py  test_name_generation.py  test_national_id.py  test_ocr_unified.py  test_regression_he_IL.py
(+50 files in other folders)
